tdf#92194 - fix confused std::vector constructor and push_back use

This was causing horrible rendering artifacts for all manner of
headless rendering across Android & Online.

A very simple fix in vcl, plus a set of tests, and some pixel
dumping helpers for debugging.

Change-Id: Ib261c0ea29d79ee6415e164c0b9b098efb52458b